--- a/dxly/alb.htm
+++ b/dxly/alb.htm
@@ -12878,8 +12878,7 @@ Yimin &#1601;&#1610; &#1575;&#1604;&#1593;&#1575;&#1604;&#1605;. </span></p>
 <p class="MsoNormal"><span lang="EN-US">&nbsp;&nbsp; &#1610;&#1608;&#1605; &#1593;&#1610;&#1583; &#1575;&#1604;&#1605;&#1610;&#1604;&#1575;&#1583; 0131 &#1602;&#1607;: &#1602;&#1607; 
 &#1610;&#1609; &#1605;&#1610;&#1606; &#1593;&#1610;&#1583; &#1605;&#1610;&#1604;&#1575;&#1583;. </span></p>
 <p class="MsoNormal"><span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
-<p class="MsoNormal"><span lang="EN-US">(&#1571;&#1585;&#1576;&#1593;&#1577; &#1593;&#1588;&#1585;)&#1548; &quot;&#1575;&#1604;&#1593;&#1589;&#1576;&#1610;&quot; TXT &#1578;&#1581;&#1605;&#1610;&#1604;: 
-http://mm.godjiao.com/gzly/sj.rar </span></p>
+<p class="MsoNormal"><span lang="EN-US">(&#1571;&#1585;&#1576;&#1593;&#1577; &#1593;&#1588;&#1585;)&#1548; &quot;&#1575;&#1604;&#1593;&#1589;&#1576;&#1610;&quot; TXT &#1578;&#1581;&#1605;&#1610;&#1604;:http://www.gegod.com </span></p>
 <p class="MsoNormal"><span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
 <p class="MsoNormal"><span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
 <p class="MsoNormal"><span lang="EN-US">&#1608;&#1575;&#1604;&#1604;&#1607; &#1587;&#1608;&#1601; &#1575;&#1604;&#1571;&#1582;&#1585;&#1608;&#1610;&#1577; &#1575;&#1604;&#1571;&#1593;&#1589;&#1575;&#1576; &#1575;&#1604;&#1589;&#1608;&#1578;&#1610;&#1577;&#1548; 
