--- a/lj.html
+++ b/lj.html
@@ -15,8 +15,7 @@
 
 <font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<a target="_blank"href="http://www.gegod.com">神网</a>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp; &nbsp; 
-&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">
-开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">紫薇圣人社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	</b> </font>
@@ -30,7 +29,7 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://club.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://bbs.gegod.com">神博客</a>&nbsp; &nbsp;<a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
+	<a target="_blank" href="http://club.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank"href="http://bbs.gegod.xyz">紫微圣人论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
 	<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 <a target="_blank" href="https://www.linkedin.com/in/%E4%BA%A6%E6%B0%91-%E8%91%9B-b109701b5/detail/recent-activity/">领英</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
@@ -43,20 +42,17 @@
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
 	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
-		<a target="_blank" href="http://geyimin.blogchina.com/">博客中国</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;
+		<a target="_blank" href="http://geyimin.blogchina.com/">博客中国</a>&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;&nbsp;
 	
- <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;
-	
-	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp; <a target="_blank" href="https://space.bilibili.com/668209000/dynamic">B站</a>&nbsp; &nbsp; <a target="_blank" href="https://www.douban.com/group/geyimin/">豆瓣</a>&nbsp; &nbsp; 
+	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://space.bilibili.com/668209000/dynamic">B站</a>&nbsp; &nbsp; &nbsp;<a target="_blank" href="https://www.douban.com/group/geyimin/">豆瓣</a>&nbsp; &nbsp; &nbsp;
 
-<a target="_blank" href="https://www.jianshu.com/u/e7788c00e1b4">简书</a>&nbsp; &nbsp; 
+<a target="_blank" href="https://www.jianshu.com/u/e7788c00e1b4">简书</a>&nbsp; &nbsp; &nbsp;
 
  <a target="_blank" href="http://cn.20331126.xyz/">投票</a>&nbsp; &nbsp;
-
-
-	
-<br>&nbsp;&nbsp; <br>&nbsp;<br>
-	<b>&nbsp;</font><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微信公众号：godjiao（</font><font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
+</font>
+<p> 
+<br>&nbsp;<br>
+	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="god.html" target="_blank">葛神异闻录</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
@@ -69,7 +65,7 @@
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="http://group.20331126.xyz/bbs">大同世界社区</a> &nbsp; &nbsp;
 <a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>
-	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a>
 
 		
 	<br><br><br>
@@ -79,11 +75,11 @@
 	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp; &nbsp;
 
 
-	<a target="_blank"href="http://group.gegod.com">德国论坛</a>&nbsp; &nbsp; 
+	
 	
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
   <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://web.gegod.com">神网</a>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.xyz ">神网</a>
 <br><br><br>
 
 		
