--- a/fygc/mtd.htm
+++ b/fygc/mtd.htm
@@ -18,7 +18,7 @@
 <P ALIGN="JUSTIFY">赞美神就是爱神，荣耀神就是我们接受圣灵（与神交通的工具），奉父子圣灵的名，去普天下传福音于万民，使万民归主。</P>
 <P ALIGN="JUSTIFY">我们不能以我们的物质文明为目的，而要以神的话（精神文明）为目的，重新建起与神的交通，得到心灵的快乐，永远的快乐。在客观理性面前，只有通过信仰的飞越才能遇到无限的上帝。</P>
 <P ALIGN="JUSTIFY">　</P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
