--- a/fygc/sdd.htm
+++ b/fygc/sdd.htm
@@ -20,7 +20,6 @@
 <P ALIGN="JUSTIFY"><FONT FACE="System" LANG="ZH-CN">6</font><FONT FACE="宋体" LANG="ZH-CN">、行神迹，基督生平中很重要的神迹有：童贞女怀孕，复活，升</FONT> <FONT FACE="宋体" LANG="ZH-CN">天。《圣经》里充满着神迹，有分红海的神迹，也有火从天上降下和在海</FONT> <FONT FACE="宋体" LANG="ZH-CN">面上行走的神迹。当然，从某种意义上说，神和人之间的任何交互作用都</FONT> <FONT FACE="宋体" LANG="ZH-CN">是神迹。愿圣灵赐给我们行神迹的能力。</FONT> </P>
 <P ALIGN="JUSTIFY"><FONT FACE="System" LANG="ZH-CN">7</font><FONT FACE="宋体" LANG="ZH-CN">、领导。我们要奉父子圣灵的名，让所有人信神，赞美神，荣耀</FONT> <FONT FACE="宋体" LANG="ZH-CN">神，重建人间伊甸园。</font></P><FONT FACE="宋体" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
-
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
