--- a/fygc/sys.htm
+++ b/fygc/sys.htm
@@ -25,6 +25,6 @@
 <P ALIGN="JUSTIFY">　</P>
 </FONT><FONT FACE="System" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">　　</P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
