--- a/fygc/pdn.htm
+++ b/fygc/pdn.htm
@@ -22,7 +22,6 @@
 <P ALIGN="JUSTIFY"><FONT FACE="宋体" LANG="ZH-CN">保罗“你们若顺从肉体活着必要死，若靠着圣灵治死身体的恶行，必</font> <FONT FACE="宋体" LANG="ZH-CN">要活着。因为凡被神的灵引导的，都是神的儿子。</FONT> </P>
 <FONT FACE="System" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
-
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
