--- a/gzly/zp.htm
+++ b/gzly/zp.htm
@@ -3,20 +3,20 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民不同时期照片</title>
+<title>葛亦民照片墙第1季</title>
 </head>
 
 <body>
 
-<p>葛亦民不同时期照片</p>
+<p>葛亦民照片墙第1季</p>
 <p>　</p>
 <p>　
-</p><a href="../gzly/zp.htm" target="_blank">照片第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">照片第2季</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片第3季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片第<span lang="en-us">4</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片第<span lang="en-us">5</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片第<span lang="en-us">6</span>季</a> 
+</p><a href="../gzly/zp.htm" target="_blank">照片墙第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">照片墙第2季</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片墙第3季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
  <p>标准照&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </p>
 <p><img border="0" src="bzz.png" width="239" height="219">
@@ -33,7 +33,7 @@
 <p>&nbsp;<br><img border="0" src="2013.jpg" >2013</p>
 <p><img border="0" src="gym2017.jpg" width="1136" height="852"><span lang="en-us">2017</span></p>
 <p>　</p>
-<p>　</p>
+<p><p>&nbsp;<br><img border="0" src="2021.jpg" >2021</p>　</p>
 <p>　<img border="0" src="byz.jpg" >葛亦民大学毕业证</p>
 <p>　</p>
 <p>&nbsp;<img border="0" src="dxbyb.jpg" >大学毕业班(倒数第二排右四）</p>
