--- a/gzly/zp2.htm
+++ b/gzly/zp2.htm
@@ -3,20 +3,20 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民不同时期照片第2季</title>
+<title>葛亦民照片墙第2季</title>
 </head>
 
 <body>
 
-<p>葛亦民不同时期照片第2季</p>
+<p>葛亦民照片墙第2季</p>
 <p>　</p>
 <p>　
-</p></p><a href="../gzly/zp.htm" target="_blank">照片第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">照片第2季</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片第3季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片第<span lang="en-us">4</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片第<span lang="en-us">5</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片第<span lang="en-us">6</span>季</a> 
+</p></p><a href="../gzly/zp.htm" target="_blank">照片墙第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">照片墙第2季</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片墙第3季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
 
 <p><img border="0" src="../rj/bzzzu.png">标准照<img border="0" src="../rj/bzzzh.png">标准照<img border="0" src="../rj/1981.png">1981<img border="0" src="../rj/cz2.png">初中<img border="0" src="../rj/sm2.png">圣母
  <img border="0" src="../rj/1984.png">高中<img border="0" src="../rj/xwh.png">大学<img border="0" src="../rj/qxs.png">大学<img border="0" src="../rj/ns.png">工作</p>
