--- a/gzly/zp4.htm
+++ b/gzly/zp4.htm
@@ -3,20 +3,20 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民不同时期照片第4季</title>
+<title>葛亦民照片墙第4季</title>
 </head>
 
 <body>
 
-<p>葛亦民不同时期照片第4季</p>
+<p>葛亦民照片墙第4季</p>
 <p>　</p>
 <p>
-</p><a href="../gzly/zp.htm" target="_blank">照片第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">照片第2季</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片第<span lang="en-us">3</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片第<span lang="en-us">4</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片第<span lang="en-us">5</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片第<span lang="en-us">6</span>季</a> 
+</p><a href="../gzly/zp.htm" target="_blank">照片墙第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">照片墙第2季</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片墙第<span lang="en-us">3</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
 <p><img border="0" src="../scsl/jsszhm.jpg"><img border="0" src="../scsl/gymmn.jpg"><img border="0" src="../scsl/dbg.jpg"><img border="0" src="../scsl/ghxw.jpg"><img border="0" src="../scsl/baidubeian.jpg"><img border="0" src="../scsl/beianali.jpg">
 
 <img border="0" src="../rj/dt1.png" width="97" height="150"><img border="0" src="../rj/gz3.png"><img border="0" src="../rj/gz1.png"><img border="0" src="../rj/d2.png"><img border="0" src="../rj/d1.png">
