--- a/gzly/zp6.htm
+++ b/gzly/zp6.htm
@@ -3,20 +3,20 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民照片第6季之同学留言</title>
+<title>葛亦民照片墙第6季之同学留言</title>
 </head>
 
 <body>
 
-<p>葛亦民照片第6季之同学留言</p>
+<p>葛亦民照片墙第6季之同学留言</p>
 <p>　</p>
 <p>
-</p><a href="../gzly/zp.htm" target="_blank">照片第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">照片第2季</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片第<span lang="en-us">3</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片第<span lang="en-us">4</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片第<span lang="en-us">5</span>季</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片第<span lang="en-us">6</span>季</a> 
+</p><a href="../gzly/zp.htm" target="_blank">照片墙第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">照片墙第2季</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">照片墙第<span lang="en-us">3</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片墙第<span lang="en-us">4</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片墙第<span lang="en-us">5</span>季</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片墙第<span lang="en-us">6</span>季</a> 
 
 
 <p><img border="0" src="../dxrj/bhl.jpg"><img border="0" src="../dxrj/xq.jpg"><img border="0" src="../dxrj/hqf.jpg"><img border="0" src="../dxrj/hxm.jpg"><img border="0" src="../dxrj/kh.jpg">
