--- a/nszz/dsp26.htm
+++ b/nszz/dsp26.htm
@@ -21,7 +21,8 @@
 
 <font size="6" color="#800080">&nbsp;</font><font size="4" color="#800080">
 </font><font size="4" color="#800080">
-<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-1-1.mp4">神经葛花训（一）1节</a></font><font size="4" color="#800080">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-1-1.mp4">神经葛花训（一）1节</a>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-1-1-3.mp4">神经葛花训（一）1-3节</a>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-1-4-8.mp4">神经葛花训（一）4-8节</a>
+	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-2.mp4">神经葛花训（二）</a>
 </font>
 <p>　<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>　<a target="_blank" a href="http://www.gegod.com/movie/zms/dsj26-6-1-3.mp4">神经葛花训（六）赞美诗1-3节</a><font size="4" color="#800080">&nbsp;&nbsp;</font>
 <p>　</p>
