--- a/xwa/adj.html
+++ b/xwa/adj.html
@@ -13,7 +13,6 @@
 <P ALIGN="JUSTIFY">这一切都是上帝的计划，上帝在无限久远之前，计划好了所有的事情，由无他的爱而设计了奇妙的救赎计划，这个计划包括差遣他的儿子作为救赎主来到世上，来拯救一切信他的人。</P>
 <P ALIGN="JUSTIFY">无限崇高的上帝以神圣的目光注视着我们，为了整体的无限完整性，他不得不让人受难，这是他的试炼，也是他的拣选，但他以无限的爱拥抱着人，同样期待着人做这做那，忍受这忍受那，因为这是合乎整体性的。</P>
 <P ALIGN="JUSTIFY">　</P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
-
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
