--- a/xwa/sdc.html
+++ b/xwa/sdc.html
@@ -16,7 +16,6 @@
 <P ALIGN="JUSTIFY"><FONT FACE="System" LANG="ZH-CN">6</font><FONT FACE="宋体" LANG="ZH-CN">、生命起源，有非物质的“生命力”存在，生命是上帝创造的。</font></P>
 <P ALIGN="JUSTIFY"><FONT FACE="System" LANG="ZH-CN">7</font><FONT FACE="宋体" LANG="ZH-CN">、人类起源，进化论只是个假设，达尔文非要东非的猿猴下树走路，并无理由。人类这个万物之灵不可能从猴脑诞生智慧，我们是神的形象，我们区分动物的就是神给的灵魂，《圣经》“神用地上的尘土造人，将生气吹在他鼻孔里，他就成了有灵的活人。”</font></P><FONT FACE="宋体" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><FONT FACE="宋体" LANG="ZH-CN"></FONT> <iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
-
+</FONT><FONT FACE="宋体" LANG="ZH-CN"></FONT> <iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
