--- a/xwa/wmw.html
+++ b/xwa/wmw.html
@@ -23,7 +23,7 @@
 </FONT><P ALIGN="JUSTIFY"><FONT FACE="宋体" LANG="ZH-CN">　　</font> <FONT FACE="宋体" LANG="ZH-CN">信者，所望之事的实底，未见之事的明证。我们信神，因为神是世界及人类存在的唯一解释，也是唯一归宿。</FONT> <FONT FACE="宋体" LANG="ZH-CN">什么时候，上帝降临人间？这是我们要知道的唯一答案，去《圣经》中找答案吧，如果你是有圣灵的基督徒。</font></P><P ALIGN="JUSTIFY">
 <FONT FACE="宋体" LANG="ZH-CN">　</font> <FONT FACE="宋体" LANG="ZH-CN">只有神是自有，永有，是开始，是结束。</FONT> <FONT FACE="宋体" LANG="ZH-CN">天国近了，你悔改吧。</font></P><FONT FACE="宋体" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
