--- a/xwa/yzz.html
+++ b/xwa/yzz.html
@@ -16,7 +16,7 @@
 <P ALIGN="JUSTIFY">地狱是撒旦和它的恶魔们的住所，也是恶人和不可救赎者的归宿。那里充满烈火和无尽苦难。《启示录》将它称为“火湖”，耶稣描述地狱为一个“虫是不死的，火是不灭的”的地方。</P>
 <P ALIGN="JUSTIFY">不再有时日了，在第七位天使吹号之时，神的奥秘就成全了，正如神所传给他仆人众先知的佳音，弟兄胜过撒旦，是因羔羊的血和自己所见证的道。到审判日，神要清算一切的帐，审判罪恶并奖赏忠诚，每一个人都要站在神面前，书卷要打开，每人将要按照他在书卷中所记录的事接受审判，任何名字不在生命册上的人（非信徒）将被扔入火湖。</P>
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
