--- a/xwa/sdt.html
+++ b/xwa/sdt.html
@@ -19,7 +19,7 @@
 <P ALIGN="JUSTIFY">上帝创世的计划什么时候完成？末日审判何时来到？因一人有罪（亚当偷吃禁果），人人有罪，上帝要人明白离了他的道，是如何迷失。因一人受难（耶稣），为众人赎罪，但人类并未遵守耶稣的教训，继续走亚当之路，在智慧果作用下，为了身体享受，片面发展物质文明，上帝要人类在高度物质文明成果下，明白离了神的道（精神文明），同样迷失。</P>
 <P ALIGN="JUSTIFY">日期近了，上帝的最后计划是让我们明白，神的道才是人类的唯一归宿，让我们更注重精神文明，让我们向神性发展，重建由亚当破坏的与神的交通，让我们称义成圣得荣耀，人人做到爱神和爱人如己（不与任何人作对），世界真正充满爱，人人把荣耀归向神，最终神得全部荣耀，建成上帝之国。</P>
 <P ALIGN="JUSTIFY">耶稣：“这天国的福音，要传遍天下，对万民作见证，然后末期才来到。”</P></FONT>
-<p>&nbsp; </p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+<p>&nbsp; </p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
