--- a/xyyd/zws.htm
+++ b/xyyd/zws.htm
@@ -27,7 +27,7 @@ a961385 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
 1楼 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-我找到你啦！等着看吧，我早晚要超越你丫！</font><img id="aimg_o8iNy" class="zoom" onclick="zoom(this, this.src, 0, 0, 0)" border="0" alt="" src="j_0003.gif" width="40" height="18" file="http://static.tieba.baidu.com/tb/editor/images/jd/j_0003.gif" lazyloaded="true"><br>
+我找到你啦！等着看吧，我早晚要超越你丫！</font><br>
 <br>
 <br>
 <br>
