--- a/xyyd/ezg.htm
+++ b/xyyd/ezg.htm
@@ -99,7 +99,7 @@
 																	<div align="left">
 																		11楼</div>
 																	<div align="left">
-																		很有可能的。他宣传的东西看过很多都很好的。<img id="aimg_ZxKEE" class="zoom" onclick="zoom(this, this.src, 0, 0, 0)" border="0" alt="" src="j_0010.gif" width="40" height="40" file="http://static.tieba.baidu.com/tb/editor/images/jd/j_0010.gif" lazyloaded="true" _load="1"><br>
+																		很有可能的。他宣传的东西看过很多都很好的。<br>
 																		但是。。。世界的规则却很奇怪</div>
 																	<br>
 　</td>
