--- a/znzc/jly.html
+++ b/znzc/jly.html
@@ -17,7 +17,7 @@
 <P ALIGN="JUSTIFY">至此，上帝之国建成，人类真正实现物质文明和精神文明双丰收。</P></FONT> 
 <FONT FACE="System" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
