--- a/znzc/qfa.html
+++ b/znzc/qfa.html
@@ -18,7 +18,7 @@
 <FONT FACE="宋体" LANG="ZH-CN"><P ALIGN="JUSTIFY">这个时代就要结束了，我们发现科学的自夸，其实是一种幼稚病。</P>
 </FONT><P ALIGN="JUSTIFY"><FONT FACE="宋体" LANG="ZH-CN">我们不能以物质文明为目的，而要从内部心灵体验中寻找生活意义要</font> <FONT FACE="宋体" LANG="ZH-CN">以神的话（精神文明）为目的，重建与神的交通，重新得到神的爱、邻人</FONT> <FONT FACE="宋体" LANG="ZH-CN">的爱，得到永恒的心灵快乐，建成充满爱的上帝之国。</font></P><FONT FACE="宋体" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
