--- a/znzc/xdw.html
+++ b/znzc/xdw.html
@@ -10,7 +10,7 @@
 <h3 ALIGN="left"><font size="3" face="宋体" lang="ZH-CN">我们重复着同样的工作（社会化大生产的分工），在人类的发明工具上消磨一生。</font></h3>
 <h3 ALIGN="left"><font size="3" face="宋体" lang="ZH-CN">我们也太实际了，太世俗化了，不再有独立思考的习惯和真心的朋友，甚至快乐的本能。</font></h3>
 <h3 ALIGN="left"><font size="3" face="宋体" lang="ZH-CN">迷途的羔羊，重建与神的交通吧，以神的道（精神文明）为目的，我们就能得到永恒的心灵快乐，因为我们是有灵魂的人。</font></h3>
-<h3 ALIGN="left">　</h3><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
+<h3 ALIGN="left">　</h3><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
 </BODY>
 </HTML>
