--- a/znzc/zhg.html
+++ b/znzc/zhg.html
@@ -14,7 +14,6 @@
 <P ALIGN="JUSTIFY"><FONT FACE="宋体" LANG="ZH-CN">科学只是手段</font><FONT FACE="System" LANG="ZH-CN">,</FONT><FONT FACE="宋体" LANG="ZH-CN">不是世界的本性。</FONT> </P>
 <P ALIGN="JUSTIFY"><FONT FACE="宋体" LANG="ZH-CN">天国近了，迷途的羔羊，从心灵中寻找生活意义吧，重新得到神的爱</font> <FONT FACE="宋体" LANG="ZH-CN">吧，爱邻人吧，人人信神，赞美神，荣耀神，建成充满爱的上帝之国。</font></P><FONT FACE="宋体" LANG="ZH-CN">
 <P ALIGN="JUSTIFY">&nbsp; </P>
-</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="file:///E|/sitegoogle/scsl/footer.html" height=“auto” width="100%"></iframe>
-
+</FONT><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </BODY>
 </HTML>
