--- a/god.html
+++ b/god.html
@@ -9,6 +9,7 @@
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font size="6" color="#800080">葛神异闻录</font></p>
+	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"></a></p>
 <p><br>
 一、葛神之纯真年代（1969年1月–1990年7月）</p>
 <p>&nbsp;&nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
