--- a/god.html
+++ b/god.html
@@ -1,79 +1,79 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ğÉñÒìÎÅÂ¼</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>è‘›ç¥å¼‚é—»å½•</title>
 </head>
 
 <body>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<font size="6" color="#800080">¸ğÉñÒìÎÅÂ¼</font></p>
+<font size="6" color="#800080">è‘›ç¥å¼‚é—»å½•</font></p>
 	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"></a></p>
 <p><br>
-Ò»¡¢¸ğÉñÖ®´¿ÕæÄê´ú£¨1969Äê1ÔÂ¨C1990Äê7ÔÂ£©</p>
-<p>&nbsp;&nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">µÚËÄÕÂ</A>&nbsp;&nbsp;&nbsp;
+ä¸€ã€è‘›ç¥ä¹‹çº¯çœŸå¹´ä»£ï¼ˆ1969å¹´1æœˆâ€“1990å¹´7æœˆï¼‰</p>
+<p>&nbsp;&nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">ç¬¬å››ç« </A>&nbsp;&nbsp;&nbsp;
 
- <A href="dxly/cz5.htm" target="_blank">µÚÎåÕÂ</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz6.htm" target="_blank">µÚÁùÕÂ</A>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz7.htm" target="_blank">µÚÆßÕÂ</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz8.htm" target="_blank">µÚ°ËÕÂ</A>&nbsp;&nbsp; &nbsp;
- <A href="dxly/cz9.htm" target="_blank">µÚ¾ÅÕÂ</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz10.htm" target="_blank">µÚÊ®ÕÂ</A>&nbsp; </p>
-<p>&nbsp;&nbsp;&nbsp;<A href="dxly/cz11.htm" target="_blank">µÚÊ®Ò»ÕÂ</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz12.htm" target="_blank">µÚÊ®¶şÕÂ</A>&nbsp; &nbsp;&nbsp;
- <A href="dxly/cz13.htm" target="_blank">µÚÊ®ÈıÕÂ</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz14.htm" target="_blank">µÚÊ®ËÄÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz15.htm" target="_blank">µÚÊ®ÎåÕÂ</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz16.htm" target="_blank">µÚÊ®ÁùÕÂ</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cz17.htm" target="_blank">µÚÊ®ÆßÕÂ</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz18.htm" target="_blank">µÚÊ®°ËÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz19.htm" target="_blank">µÚÊ®¾ÅÕÂ</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz20.htm" target="_blank">µÚ¶şÊ®ÕÂ</A>&nbsp;&nbsp;&nbsp;
-</p> &nbsp;&nbsp;&nbsp; <A href="dxly/cz21.htm" target="_blank">µÚ¶şÊ®Ò»ÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz22.htm" target="_blank">µÚ¶şÊ®¶şÕÂ</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz23.htm" target="_blank">µÚ¶şÊ®ÈıÕÂ</A>&nbsp;&nbsp;&nbsp;
-
-</p>
-
-
+ <A href="dxly/cz5.htm" target="_blank">ç¬¬äº”ç« </A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz6.htm" target="_blank">ç¬¬å…­ç« </A>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz7.htm" target="_blank">ç¬¬ä¸ƒç« </A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz8.htm" target="_blank">ç¬¬å…«ç« </A>&nbsp;&nbsp; &nbsp;
+ <A href="dxly/cz9.htm" target="_blank">ç¬¬ä¹ç« </A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz10.htm" target="_blank">ç¬¬åç« </A>&nbsp; </p>
+<p>&nbsp;&nbsp;&nbsp;<A href="dxly/cz11.htm" target="_blank">ç¬¬åä¸€ç« </A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz12.htm" target="_blank">ç¬¬åäºŒç« </A>&nbsp; &nbsp;&nbsp;
+ <A href="dxly/cz13.htm" target="_blank">ç¬¬åä¸‰ç« </A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz14.htm" target="_blank">ç¬¬åå››ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz15.htm" target="_blank">ç¬¬åäº”ç« </A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz16.htm" target="_blank">ç¬¬åå…­ç« </A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz17.htm" target="_blank">ç¬¬åä¸ƒç« </A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz18.htm" target="_blank">ç¬¬åå…«ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz19.htm" target="_blank">ç¬¬åä¹ç« </A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz20.htm" target="_blank">ç¬¬äºŒåç« </A>&nbsp;&nbsp;&nbsp;
+</p> &nbsp;&nbsp;&nbsp; <A href="dxly/cz21.htm" target="_blank">ç¬¬äºŒåä¸€ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz22.htm" target="_blank">ç¬¬äºŒåäºŒç« </A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz23.htm" target="_blank">ç¬¬äºŒåä¸‰ç« </A>&nbsp;&nbsp;&nbsp;
 
 </p>
-<p>¡¡</p>
-<p>¶ş¡¢¸ğÉñÖ®½­ºşËêÔÂ£¨1989Äê6ÔÂ¨C1990Äê7ÔÂ£©</p>
-<p>&nbsp;&nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp;&nbsp;¡¡<A href="dxly/jhsy2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;¡¡<A href="dxly/jhsy3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;
-¡¡<A href="dxly/jhsy4.htm" target="_blank">µÚËÄÕÂ</A>&nbsp;&nbsp;<A href="dxly/jhsy5.htm" target="_blank">µÚÎåÕÂ</A>&nbsp; 
-&nbsp;<A href="dxly/jhsy6.htm" target="_blank">µÚÁùÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">µÚÆßÕÂ</A>&nbsp;&nbsp;&nbsp;
+
 
 
 </p>
-<p>¡¡</p>
-<p>Èı¡¢¸ğÉñÖ®·ÉÔ½·èÈËÔº£¨1990Äê12ÔÂ¨C½ñ£©</p>
-&nbsp;&nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;&nbsp;&nbsp;
-
-<A href="dxly/fyfry4.htm" target="_blank">µÚËÄÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry5.htm" target="_blank">µÚÎåÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry6.htm" target="_blank">µÚÁùÕÂ</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/fyfry7.htm" target="_blank">µÚÆßÕÂ</A>&nbsp;&nbsp;&nbsp;
-
+<p>ã€€</p>
+<p>äºŒã€è‘›ç¥ä¹‹æ±Ÿæ¹–å²æœˆï¼ˆ1989å¹´6æœˆâ€“1990å¹´7æœˆï¼‰</p>
+<p>&nbsp;&nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp;&nbsp;ã€€<A href="dxly/jhsy2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;ã€€<A href="dxly/jhsy3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;
+ã€€<A href="dxly/jhsy4.htm" target="_blank">ç¬¬å››ç« </A>&nbsp;&nbsp;<A href="dxly/jhsy5.htm" target="_blank">ç¬¬äº”ç« </A>&nbsp; 
+&nbsp;<A href="dxly/jhsy6.htm" target="_blank">ç¬¬å…­ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">ç¬¬ä¸ƒç« </A>&nbsp;&nbsp;&nbsp;
 
 
+</p>
+<p>ã€€</p>
+<p>ä¸‰ã€è‘›ç¥ä¹‹é£è¶Šç–¯äººé™¢ï¼ˆ1990å¹´12æœˆâ€“ä»Šï¼‰</p>
+&nbsp;&nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;&nbsp;&nbsp;
 
-
-
-<p>¡¡</p>
-<p>ËÄ¡¢¸ğÉñºÍËûµÄÅ®ÈËÃÇ£¨1990Äê8ÔÂ¨C½ñ£©</p>
-
-&nbsp;&nbsp;&nbsp; <A href="dxly/nrm1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/nrm4.htm" target="_blank">µÚËÄÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">µÚÎåÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">µÚÁùÕÂ</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry4.htm" target="_blank">ç¬¬å››ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry5.htm" target="_blank">ç¬¬äº”ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry6.htm" target="_blank">ç¬¬å…­ç« </A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry7.htm" target="_blank">ç¬¬ä¸ƒç« </A>&nbsp;&nbsp;&nbsp;
 
 
 
 
 
-<p>¡¡</p>
-<p>Îå¡¢¸ğÉñÖ®ÍøÂçÉúÑÄ£¨2001Äê3ÔÂ¨C½ñ£©</p>
 
-&nbsp;&nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;&nbsp;&nbsp;
+<p>ã€€</p>
+<p>å››ã€è‘›ç¥å’Œä»–çš„å¥³äººä»¬ï¼ˆ1990å¹´8æœˆâ€“ä»Šï¼‰</p>
 
-<A href="dxly/wl4.htm" target="_blank">µÚËÄÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl5.htm" target="_blank">µÚÎåÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl6.htm" target="_blank">µÚÁùÕÂ</A>&nbsp;&nbsp;&nbsp;
-
-
+&nbsp;&nbsp;&nbsp; <A href="dxly/nrm1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm4.htm" target="_blank">ç¬¬å››ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">ç¬¬äº”ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">ç¬¬å…­ç« </A>&nbsp;&nbsp;&nbsp;
 
 
 
-<p>¡¡</p>
-<p>Áù¡¢¸ğÉñÖ®³ÉÉñÖ®Â·£¨2001Äê4ÔÂ¨C½ñ£©</p>
-
-&nbsp;&nbsp;&nbsp; <A href="dxly/cs1.htm" target="_blank">µÚÒ»ÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">µÚ¶şÕÂ</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">µÚÈıÕÂ</A>&nbsp;&nbsp;&nbsp;
 
 
-<p>¡¡</p>
+<p>ã€€</p>
+<p>äº”ã€è‘›ç¥ä¹‹ç½‘ç»œç”Ÿæ¶¯ï¼ˆ2001å¹´3æœˆâ€“ä»Šï¼‰</p>
+
+&nbsp;&nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;&nbsp;&nbsp;
+
+<A href="dxly/wl4.htm" target="_blank">ç¬¬å››ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl5.htm" target="_blank">ç¬¬äº”ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl6.htm" target="_blank">ç¬¬å…­ç« </A>&nbsp;&nbsp;&nbsp;
+
+
+
+
+
+<p>ã€€</p>
+<p>å…­ã€è‘›ç¥ä¹‹æˆç¥ä¹‹è·¯ï¼ˆ2001å¹´4æœˆâ€“ä»Šï¼‰</p>
+
+&nbsp;&nbsp;&nbsp; <A href="dxly/cs1.htm" target="_blank">ç¬¬ä¸€ç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">ç¬¬äºŒç« </A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">ç¬¬ä¸‰ç« </A>&nbsp;&nbsp;&nbsp;
+
+
+<p>ã€€</p>
 
 
 
