--- a/lj.html
+++ b/lj.html
@@ -29,12 +29,12 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://club.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank"href="http://bbs.gegod.xyz">紫微圣人论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank"href="http://bbs.gegod.xyz">紫微圣人论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
 	<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 <a target="_blank" href="https://www.linkedin.com/in/%E4%BA%A6%E6%B0%91-%E8%91%9B-b109701b5/detail/recent-activity/">领英</a>&nbsp; &nbsp;
+	&nbsp;&nbsp;&nbsp;<a target="_blank" href="//www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
-	<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
-
+	
 
 	</font>
 	
@@ -42,17 +42,17 @@
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
 	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
-		<a target="_blank" href="http://geyimin.blogchina.com/">博客中国</a>&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://space.bilibili.com/668209000/dynamic">B站</a>&nbsp; &nbsp; &nbsp;<a target="_blank" href="https://www.douban.com/group/geyimin/">豆瓣</a>&nbsp; &nbsp; &nbsp;
-
-<a target="_blank" href="https://www.jianshu.com/u/e7788c00e1b4">简书</a>&nbsp; &nbsp; &nbsp;
+	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;
 
  <a target="_blank" href="http://cn.20331126.xyz/">投票</a>&nbsp; &nbsp;
 </font>
+
+	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="god.html" target="_blank">葛神异闻录</A>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 <p> 
-<br>&nbsp;<br>
-	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="god.html" target="_blank">葛神异闻录</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
+<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
