--- a/wx.html
+++ b/wx.html
@@ -81,8 +81,8 @@
 		
 		
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<font size="5">
-	<b>  <A href="god.html" target="_blank">葛神异闻录</A></b></font>
-	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"></a></p>
+	<b> <A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="god.html" target="_blank">葛神异闻录</A></b></font>
+	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"WIDTH=130 HEIGHT=200></a></p>
 
 <br><br><br>
 	<p>
