--- a/xw.html
+++ b/xw.html
@@ -82,16 +82,18 @@
 		
 		
 		<p>1、神经第一版已于2014年9月在香港四季出版社出版，书号：ISBN978-988-13762-1-3&nbsp;&nbsp; 
-		神经已在香港特区政府康乐及文化事务署书刊注册组注册，任何人可电话2180 9146或邮件bro@lcsd.gov.hk查询。</p>
+		神经已在香港特区政府康乐及文化事务署书刊注册组注册。</p>
+		<p>）1、</p>
 		<p><IMG SRC="pic/sjzc.jpg"WIDTH=600 HEIGHT=800 BORDER=0 ></p>
 		<p><IMG SRC="pic/cbzm.jpg"WIDTH=600 HEIGHT=800 BORDER=0 ></p><p><IMG SRC="pic/qyzm.jpg" ><p>
-		香港特別行政區政府憲報第4號特別副刊內的《香港印刷書刊目錄》。 
+		）2、香港特別行政區政府憲報第4號特別副刊內的《香港印刷書刊目錄》。 
 		<p>
 		<a href="https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf" target="_blank">https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf</a><p>
 		<span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; font-size: 12pt;">
 		同時按下&nbsp;Ctrl&nbsp;及&nbsp;F&nbsp;鍵</span><span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">&nbsp;</span><br style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 		<span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; font-size: 12pt;">
-		&nbsp;在「尋找」對話方塊空格內，輸入 葛亦民 或 978-988-<span t="5" times style="border-bottom: 1px dashed rgb(204, 204, 204);">13762-1</span>-3</span><p><IMG SRC="pic/hkzfsjsh.jpg" ><IMG SRC="pic/sjsj.jpg"></a> </p>
+		&nbsp;在「尋找」對話方塊空格內，輸入 葛亦民 或 978-988-<span t="5" times style="border-bottom: 1px dashed rgb(204, 204, 204);">13762-1</span>-3</span><p><IMG SRC="pic/hkzfsjsh.jpg" ></p>
+		<p>）3、<IMG SRC="pic/sjsj.jpg"></a> </p>
 				<p>2、肥罗是否转会扑朔迷离 米兰皇马究竟谁在说谎<br>
 		安切洛蒂是在夏季联赛米兰1：0战胜马竞的赛后媒体见面会上做出上述辟谣性声名的，用他的话讲，“《意大利体育报》和其他意大利或者西班牙的报纸一样，毕竟不是《耶梅经》。”<br>
 		耶梅经即神经，神经最早版本。安帅举例神经，即表明听众人人知道。不然，别人听不懂。</p>
@@ -157,7 +159,7 @@
 13、<p>
 
 &nbsp;<IMG SRC="pic/sjsfz.jpg">
-<IMG SRC="pic/cbsfz.jpg"><IMG SRC="pic/zcsfz.jpg"><br> 		
+	
 		
 	
 		<p>14、中国知网收录《青年文学家》期刊2015年4月11期葛亦民论文<br>
