--- a/god.html
+++ b/god.html
@@ -9,7 +9,7 @@
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font size="6" color="#800080">葛神异闻录</font></p>
-	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"></a></p>
+	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"WIDTH=130 HEIGHT=200></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
 <p><br>
 一、葛神之纯真年代（1969年1月–1990年7月）</p>
 <p>&nbsp;&nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
@@ -30,7 +30,7 @@
 <p>二、葛神之江湖岁月（1989年6月–1990年7月）</p>
 <p>&nbsp;&nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy3.htm" target="_blank">第三章</A>&nbsp;
 　<A href="dxly/jhsy4.htm" target="_blank">第四章</A>&nbsp;&nbsp;<A href="dxly/jhsy5.htm" target="_blank">第五章</A>&nbsp; 
-&nbsp;<A href="dxly/jhsy6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;
+&nbsp;<A href="dxly/jhsy6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
 
 
 </p>
@@ -39,7 +39,12 @@
 &nbsp;&nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
 <A href="dxly/fyfry4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/fyfry7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp; </p>
+<p>&nbsp;&nbsp;&nbsp; <A href="dxly/fyfry11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
 
 
 
@@ -50,7 +55,8 @@
 <p>四、葛神和他的女人们（1990年8月–今）</p>
 
 &nbsp;&nbsp;&nbsp; <A href="dxly/nrm1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/nrm4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp;
 
 
 
@@ -61,7 +67,7 @@
 
 &nbsp;&nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
-<A href="dxly/wl4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
 
 
 
@@ -70,7 +76,9 @@
 <p>　</p>
 <p>六、葛神之成神之路（2001年4月–今）</p>
 
-&nbsp;&nbsp;&nbsp; <A href="dxly/cs1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; <A href="dxly/cs1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 <p>　</p>
